syntax = "proto3";
package polygon.envoy.v1;

option go_package = "github.com/polygon/envoy";

import "polygon/envoy/v1/types.proto";
import "google/api/annotations.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";

service Query {
  rpc GetLock(QueryGetLockRequest) returns (QueryGetLockResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
        "/polygon/envoy/v1/locks/{name}";
  }
}

message QueryGetLockRequest {
  string name = 1;
}

message QueryGetLockResponse {
  Lock lock = 1;
}

